--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,21 +1,28 @@
 {% extends 'base.html.twig' %}
 
+{% block header_title %}<h1 class="text-center">Se connecter</h1>{% endblock %}
+
 {% block body %}
     {% if error %}
         <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
     <form method="post">
-        <label for="username">Nom d'utilisateur :</label>
-        <input type="text" id="username" name="username" value="{{ last_username }}" />
+        <div class="my-2">
+            <label for="username" class="form-label">Nom d'utilisateur :</label>
+            <input type="text" id="username" class="form-control" name="username" value="{{ last_username }}"/>
+        </div>
 
-        <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="password" />
+        <div class="my-2">
+            <label for="password" class="form-label">Mot de passe :</label>
+            <input type="password" class="form-control" id="password" name="password"/>
+        </div>
 
         <input type="hidden" name="_csrf_token"
                value="{{ csrf_token('authenticate') }}"
         >
 
-        <button class="btn btn-success" type="submit">Se connecter</button>
+        <button class="btn btn-success my-3" type="submit">Se connecter</button>
     </form>
+
 {% endblock %}
