--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,13 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap:20px;
+        }
+    </style>
 </head>
 
 <header>
