--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -8,7 +8,7 @@
 
     <div class="d-flex justify-content-evenly">
         <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
-        <a href="{{ path('task_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
-        <a href="" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
+        <a href="{{ path('task_list') }}" class="btn btn-info">Consulter les tâches</a>
+        <a href="{{ path('task_done_list') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
     </div>
 {% endblock %}
