--- a/templates/task/_card.html.twig
+++ b/templates/task/_card.html.twig
@@ -7,27 +7,37 @@
             <span class="badge badge bg-success">Fait</span>
         {% endif %}
         {% if task.isDelete == true %}
-            <span class="badge badge bg-warning">Supprimer</span>
+            <span class="badge badge bg-danger">Effacer</span>
         {% endif %}
     </div>
     <div class="card-body">
         <div class="card-title">
             <h4><a class="text-dark" href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a></h4>
         </div>
-        <div class="card-text">
-            <p>{{ task.content }}</p>
-        </div>
+        <p class="card-text">{{ task.content }}</p>
+        <p class="card-text"><small class="text-muted">Edité par
+                {% if task.user %}
+                    <i>{{ task.user.username }}</i>
+                {% else %}
+                    <i>Anonyme</i>
+                {% endif %}
+            </small></p>
     </div>
+
     <div class="card-footer d-flex">
         <form action="{{ path('task_flag_done', {'id' : task.id }) }}">
-                {% if not task.isDone %}
-            <button class="btn btn-success btn-sm pull-right me-2">Fait</button>
-                {% else %}
-                    <button class="btn btn-secondary btn-sm pull-right me-2">Non fait</button>
-                {% endif %}
+            {% if not task.isDone %}
+                <button class="btn btn-success btn-sm pull-right me-2">Fait</button>
+            {% else %}
+                <button class="btn btn-secondary btn-sm pull-right me-2">Non fait</button>
+            {% endif %}
         </form>
         <form action="{{ path('task_flag_delete', {'id' : task.id }) }}">
-            <button class="btn btn-danger btn-sm pull-right">Effacer</button>
+            {% if not task.isDelete %}
+                <button class="btn btn-danger btn-sm pull-right me-2">Effacer</button>
+            {% else %}
+                <button class="btn btn-warning btn-sm pull-right me-2">Restaurer</button>
+            {% endif %}
         </form>
     </div>
 </div>
