--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
         .grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            grid-gap:20px;
+            grid-gap: 20px;
         }
     </style>
 </head>
@@ -48,11 +48,16 @@
 <!-- Page Content -->
 <div class="container">
     <div class="d-flex justify-content-between my-2">
-        <a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
-
-        {% if app.user %}
-            <a href="{{ path('app_logout') }}" class="pull-right btn btn-danger">Se déconnecter</a>
-        {% endif %}
+        <div class="me-auto">
+            {% if is_granted('ROLE_ADMIN') %}
+                <a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
+            {% endif %}
+        </div>
+        <div class="ms-auto">
+            {% if app.user %}
+                <a href="{{ path('app_logout') }}" class="pull-right btn btn-danger">Se déconnecter</a>
+            {% endif %}
+        </div>
 
         {% if not app.user and 'login' != app.request.attributes.get('_route') %}
             <a href="{{ path('app_login') }}" class="btn btn-success">Se connecter</a>
