--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -8,7 +8,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 text-center">
                 <span class="display-1 d-block">{{ status_code }}</span>
-                <div class="mb-4 lead">Vous n'êtes pas propriétaire de cette tâche.</div>
+                <div class="mb-4 lead">Vous ne pouvez pas effectuer d'action car vous n'êtes pas propriétaire de cette tâche.</div>
                 <a href="{{ path('app_home') }}" class="btn btn-link">Retour à la page d'accueil</a>
             </div>
         </div>
