--- a/templates/admin/user/create.html.twig
+++ b/templates/admin/user/create.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="row">
-        {{ form_start(form, {'action' : path('user_create')}) }}
+        {{ form_start(form, {'action' : path('user_creae')}) }}
             {{ form_row(form.username) }}
             {{ form_row(form.password) }}
             {{ form_row(form.email) }}
