--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -7,7 +7,8 @@
 {% block body %}
     {% if users|length == 0 %}
         <div class="alert alert-danger" role="alert">
-            Il n'y a pas encore d'utilisateur enregistré. <a href="{{ path('user_create') }}" class="btn btn-warning pull-right">Créer un utilisateur</a>
+            Il n'y a pas encore d'utilisateur enregistré. <a href="{{ path('user_create') }}"
+                                                             class="btn btn-warning pull-right">Créer un utilisateur</a>
         </div>
     {% else %}
         {% for message in app.flashes('success') %}
@@ -22,6 +23,7 @@
                     <th>#</th>
                     <th>Nom d'utilisateur</th>
                     <th>Adresse d'utilisateur</th>
+                    <th>Rôle</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
@@ -30,7 +32,15 @@
                     <tr>
                         <th scope="row">{{ loop.index }}</th>
                         <td>{{ user.username }}</td>
-                        <td>{{ user.email }}</td>
+                        <td>{{ user.email }}
+                            {% for role in user.roles %}
+                                {% if role == 'ROLE_USER' %}
+                                    <td>Utilisateur</td>
+                                {% endif %}
+                                {% if role == 'ROLE_ADMIN' %}
+                                    <td>Administrateur</td>
+                                {% endif %}
+                            {% endfor %}
                         <td>
                             <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Edit</a>
                         </td>
