--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %} {{ status_code }} - {{ status_text }} {% endblock %}
 
+{% block header_button %}{% endblock %}
+
+{% block header_img %}{% endblock %}
+
 {% block body %}
 <div class="page-wrap d-flex flex-row align-items-center">
     <div class="container">
