--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -42,7 +42,8 @@
                                 {% endif %}
                             {% endfor %}
                         <td>
-                            <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Edit</a>
+                            <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Modifier</a>
+                            <a href="{{ path('user_delete', {'id' : user.id}) }}" class="btn btn-danger btn-sm">Supprimer</a>
                         </td>
                     </tr>
                 {% endfor %}
