--- a/templates/task/_card.html.twig
+++ b/templates/task/_card.html.twig
@@ -1,4 +1,4 @@
-<div class="card h-100">
+<div class="card h-100 mb-3">
     <div class="card-header">
         {% if task.isDone == false %}
             <span class="badge badge bg-secondary">Non fait</span>
