--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,21 +15,8 @@
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link href="{{ asset('css/shop-homepage.css') }}" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <style>
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-gap: 20px;
-        }
-    </style>
+    {% block stylesheet %}{% endblock %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('assets/responsive.css') }}">
 </head>
 
 <header>
@@ -83,7 +70,7 @@
             <div class="text-center">
                 {% block header_title %}{% endblock %}
             </div>
-            {% block header_img %}<img class="slide-image" src="{{ asset('img/todolist_homepage.jpg') }}"
+            {% block header_img %}<img class="w-100 img-fluid" src="{{ asset('img/todolist_homepage.jpg') }}"
                                        alt="todo list">{% endblock %}
         </div>
     </div>
