--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,14 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block header_title %}
-    <h1 class="text-center">Bienvenue sur Todo List, l'application vous permettant de gérer l'ensemble de vos tâches sans effort !</h1>
+    <h1 class="text-center">Bienvenue sur Todo List, l'application vous permettant de gérer l'ensemble de vos tâches
+        sans effort !</h1>
 {% endblock %}
 
 {% block body %}
 
-    <div class="d-flex justify-content-evenly">
-        <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
-        <a href="{{ path('task_list') }}" class="btn btn-info">Consulter les tâches</a>
-        <a href="{{ path('task_done_list') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
+    <div id="button-home">
+        <div class="mb-3">
+            <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
+        </div>
+        <div class="mb-3">
+            <a href="{{ path('task_list') }}" class="btn btn-info">Consulter les tâches</a>
+        </div>
+        <div class="mb-3">
+            <a href="{{ path('task_done_list') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
+        </div>
     </div>
 {% endblock %}
